--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "jest": "^25.0.0"
